hphp/test/zend/good/Zend/tests/objects_017.php.expectf

Fatal error: Cannot access protected property in %s/objects_017.php on line 11
